BAH-4674 | Fix. Alignment of notes for observations

--- a/packages/bahmni-widgets/src/observationsRenderer/styles/ObservationsRenderer.module.scss
+++ b/packages/bahmni-widgets/src/observationsRenderer/styles/ObservationsRenderer.module.scss
@@ -98,12 +98,7 @@
 }
 
 .commentSection {
-  margin-block-start: $spacing-04;
-  padding-block-start: $spacing-04;
-  border-block-start: 1px solid $border-subtle-01;
-}
-
-.commentText {
+  margin-top: -$spacing-04;
   @include type-style("body-compact-01");
   color: $text-secondary;
   font-style: italic;
